crates/toml/tests/snapshots/invalid/integer/leading-us-bin.stderr
TOML parse error at line 1, column 18
  |
1 | leading-us-bin = _0b1
  |                  ^
`_` may only go between digits, expected nothing
